--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ target/
 
 
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -39,3 +40,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+# Maven wrapper files
+.mvn/
+mvnw
+mvnw.cmd
